# Court-Jester-Selector

./: README.md  config.py  main.py  pyproject.toml  requirements.txt
migrations/: env.py
migrations/versions/: 104786831912_add_telegram_title_and_approved_fields_.py  2df1d50a648f_add_unique_constraint_to_player_model.py  391a17f83d7d_add_approval_messages_json_field.py  78c9612a4af2_remove_unique_constraint_on_player_.py  94fa23ba6cae_add_weight_to_player_model.py  97e9062d5075_add_weight_check_constraint_to_player_.py  a0a6e3f6cf9f_add_unique_constraint_and_index_on_.py  bd1a26d176fa_change_telegram_ids_to_biginteger.py  c721e06e0328_initial.py
models/: Draw.py  Group.py  Player.py  __init__.py
